src/styles/MainMenu.scss
.mainmenu-container {
  display: flex;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.sidebar {
  width: 16.67%;
  height: 100vh;
  background-color: #00008B; 
  color: white;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-y: auto;
  box-sizing: border-box;
  justify-content: space-between; // 这会将内容分散到顶部和底部
}

.algorithm-category {
  width: 48%;
  margin-bottom: 20px;
  
}

.logo {
  width: 50%;
  margin-bottom: 0px;
}

.title {
  text-align: center;
  margin-bottom: 20px;
}

.algorithm {
  display: block;
}

.in-action {
  display: block;
}

.search-container {
  width: 100%;
  position: relative;

}

.search-bar {
  width: 90%;
  padding: 10px;
  border: none;
  border-radius: 5px;
}

.search-results {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  background-color: white;
  border: 1px solid #ddd;
  border-radius: 0 0 5px 5px;
  max-height: 200px;
  overflow-y: auto;
  z-index: 1000;
}

.search-result-link {
  display: block;
  padding: 10px;
  text-decoration: none;
  color: #333;
}

.search-result-link:hover {
  background-color: #f0f0f0;
}

.algorithm-link {
  display: block;
  padding: 10px;
  margin-bottom: 5px;
  background-color: #f0f0f0;
  text-decoration: none;
  color: #333;
  border-radius: 5px;
}

.algorithm-link:hover {
  background-color: #e0e0e0;
}

.about-link {
  margin-top: auto; // 这会将链接推到底部
  padding: 10px;
  color: white;
  text-decoration: none;
  font-size: 1.1em;
  transition: color 0.3s ease;

  &:hover {
    color: #f0f0f0;
  }
}

// TODO: NOT FINAL, Design is just to address scaling issues with the previous implementation
// further discussion with the client is needed. For example the client might not want
// each cell to take up the same Y as its biggest item in the row.

// Container for the "boxes" of different algorithm categories on the main page.
.main-content {
  flex-grow: 1;
  background-color: black;
  // Grid display, each box fits in a grid
  display: grid;
  // 3 cols? Discuss with client
  grid-template-columns: repeat(3, auto);
  overflow-y: auto; // Scroll
  gap: 16px;
}

// Container for each category of algorithms
// these will hold the various links to each algorithm
// in a specific category.
.category-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  padding: 20px;
}

.category {
  font-size: 2em;
  color: white;
  text-align: center;
  margin-bottom: 10px;
}

.mainmenu-algo-link {
  font-size: 1.5em;
  color: #89c9f5;
  text-decoration: underline;
  transition: color 0.3s ease;
  text-align: center; // Keep centered
  margin-top: 5px;
  margin-bottom: 5px;
}

.mainmenu-algo-link:hover {
  color: #2c3e50;
}

